2005-06-30 Pierrick LE GALL

	* categories management : new display with icon for actions
	(delete, sub-categories, elements, edit, jump to, permissions)

	* categories management : semantic HTML layout (using common
	lists)

	* categories management : new way to order categories of the same
	level : a text field let the admin reorder all categories at once.
	
2005-06-25 Pierrick LE GALL

	* new feature : ability to add links on the main page (see
	include/config_default.inc.php)
	
2005-06-21 Pierrick LE GALL

	* comments page rewritten : comments are displayed one by one,
	with filters and display options available. The list of comments
	is paginated.
	
2005-06-21 Pierrick LE GALL

	* direct communication between templates and language items,
	without needing a mapping in the PHP code.

2005-06-21 Pierrick LE GALL

	* new function get_name_from_file to centralize the construction
	of displayed name from the filename

	* new function l10n which returns the corresponding value from
	$lang if existing. Else, the key is returned. This means that if a
	language item is not translated, the key is displayed instead
	(better than nothing).

2005-06-11 Pierrick LE GALL

	* errors and informations boxes : management centralized in
	admin.php, $errors and $infos arrays replaced by $page['errors']
	and $page['infos'], special management for admin/update.php (more
	complex management)

2005-06-11 Pierrick LE GALL

	* bug 96 (informations given by uploaders are lost) correction
	reported from branch 1.4

2005-05-10 Pierrick LE GALL

	* user list : links to profile page and permissions page are
	represented by icons (more compact)

	* user list : ability to associate to a group or to dissociate
	from a group a list of selected users

	* user list : ability to set user properties in "batch" mode (a
	selection of users at once)

	* user list : alternate background color for each line
	
2005-04-30 Pierrick LE GALL

	* user list updated : ability to filter list on status. Function